--- a/maven/values.yaml
+++ b/maven/values.yaml
@@ -1,13 +1,8 @@
-# Default values for maven.
-# This is a YAML-formatted file.
-# Declare variables to be passed into your templates.
-
-replicaCount: 1
+replicaCount: 2
 
 image:
-  repository: dockerhandson/maven-web-application
+  repository: jithendradevops/springboot-jar
   pullPolicy: IfNotPresent
-  # Overrides the image tag whose default is the chart appVersion.
   tag: "1"
 
 imagePullSecrets: []
@@ -15,12 +10,9 @@ nameOverride: ""
 fullnameOverride: ""
 
 serviceAccount:
-  # Specifies whether a service account should be created
   create: true
-  # Annotations to add to the service account
   annotations: {}
-  # The name of the service account to use.
-  # If not set and create is true, a name is generated using the fullname template
+
   name: ""
 
 podAnnotations: {}
@@ -37,7 +29,7 @@ securityContext: {}
   # runAsUser: 1000
 
 service:
-  type: ClusterIP
+  type: LoadBalancer
   port: 8083
 
 ingress:
@@ -57,10 +49,6 @@ ingress:
          - mithun-ingress-tls
 
 resources:
-  # We usually recommend not to specify default resources and to leave this as a conscious
-  # choice for the user. This also increases chances charts run on environments with little
-  # resources, such as Minikube. If you do want to specify resources, uncomment the following
-  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
     limits:
       cpu: 200m
       memory: 512Mi
